Fix hero image bleed - use fixed -500px at 1200px+ so hero overflow clips it reliably

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -772,8 +772,8 @@ h3.step-title {
 
 @media (min-width: 1200px) {
   .hero__mockup-wrapper {
-    margin-right: calc(-1 * ((100vw - 1200px) / 2 + 80px));
-    width: calc(100% + (100vw - 1200px) / 2 + 80px);
+    margin-right: -500px;
+    width: calc(100% + 500px);
   }
 }
 
